RDM-1662: Fixed some alignments on case list page

--- a/src/app/shared/search/search-result.scss
+++ b/src/app/shared/search/search-result.scss
@@ -9,7 +9,6 @@ $blue_pagination: #005da6;
 $black: #231F20;
 
 table {
-  table-layout: fixed;
 
   thead tr th {
     padding-left: 10px;
@@ -31,10 +30,10 @@ table {
     }
 
   }
-}
 
-div {
-  padding: 30px 0px 30px 0px;
+  .caseid-col {
+    white-space: nowrap;
+  }
 }
 
 .pagination /deep/ .ngx-pagination {
@@ -74,6 +73,7 @@ div {
 
 .notification {
   text-align: center;
+  padding: 30px 0px 30px 0px;
 }
 
 .search-result-column-header {
@@ -91,12 +91,13 @@ div {
 }
 
 .search-result-column-label {
-  @include bold-16pt;
+  font-size: 16px;
+  font-weight: bold;
   word-wrap: break-word;
 }
 
 .search-result-column-sort {
-  font-size: 12pt;
+  font-size: 16px;
 }
 
 .sort-widget {
